<resources>
    <string name="app_name">gihubapp</string>

    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>

    <string name="sfollowers">Followers</string>
    <string name="sfollowing">Following</string>

    <string name="setting">setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite">favorite</string>

    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="followers_value">followers_v</string>
    <string name="following_value">following_v</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="profile_image">profileImage</string>
    <string name="blog">Blog</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="tabs">tabs</string>
    <string name="search_hint">Cari user Github </string>
    <string name="no_data">Data kosong</string>
    <string name="text_failed_load">Gagal memuat data,silahkan coba lagi</string>
    <string name="user_favorite">User Favorite</string>
    <string name="user_detail">User Detail</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="repository">repository</string>
    <string name="repository_value">repository_v</string>

    <string name="pager_desc">Pager Desc</string>
    <string name="tab_desc">Tabs Desc</string>

    <string name="user_failed">User Tidak Ditemukan</string>
    <string name="user_nodata">Data Tidak Ada</string>

    <string name="hasRemoved">Has Removed From Favorite</string>
    <string name="hasAdded">Has Added to Favorite</string>

    <string name="splash">Loading...</string>

</resources>